# qcoding-early-prototype

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: log_data (not bad).json  log_data.json  main.py  scenario.py
backend/app/interactions/: antagonistic.py  infinite.py  livingpapers.py
backend/app/prompts/: antagonistic.py  infinite.py  livingcodes.py  livingpapers.py  sample_data_string.py  user_prompt.py
frontend/: index.html  manifest.json  package.json  vite.config.ts
frontend/src/: App.style.ts  App.tsx  content.ts  index.css  log_data.json  main.tsx  sample.ts
frontend/src/interaction/: AntagonisticResultPanel.style.ts  AntagonisticResultPanel.tsx  InfiniteResultPanel.style.ts  InfiniteResultPanel.tsx  LivingCodesResultPanel.style.ts  LivingCodesResultPanel.tsx  LivingPapersResultPanel.style.ts  LivingPapersResultPanel.tsx
frontend/src/sidebar/: index.tsx
frontend/src/types/: InfiniteItem.ts  LivingCodesItem.ts
